--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<center><img src="" width="300" height="300"</center>
+<center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
 <body>
-    
+<table align="right">
+    <td>
+       <a href="Pages/lojavirtual.html">Loja Virtual</a>
+    </td>
+    <td>
+        <a href="Pages/produtos.html">Produtos</a>
+    </td>
+</table>
+
 </body>
 </html>
