--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
 <body>
-<table align="right">
+<table align="left">
     <tr>
         <td>
        <a href="Pages/lojavirtual.html">Loja Virtual</a>
@@ -18,6 +18,21 @@
         <td>
         <a href="Pages/produtos.html">Produtos</a>
         </td>
+    </tr>
+    <tr>
+        <td>
+        <a href="/Pages/endereço.html">Endereço</a>
+        </td>
+    <tr>
+        <td>
+        <a href="Pages/quemsomos.html">Quem somos?</a>
+        </td>
+    <tr>
+        <td>
+        <a href="Pages/contato.html">Contato</a>
+        </td>
+    </tr>
+    </tr>
     </tr>
 </table>
 
