--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </tr>
     <tr>
         <td>
-        <a href="/Pages/endereço.html">Endereço</a>
+        <a href="/Pages/endereço.html" target="_blank">Endereço</a>
         </td>
     <tr>
         <td>
@@ -31,8 +31,6 @@
         <td>
         <a href="Pages/contato.html">Contato</a>
         </td>
-    </tr>
-    </tr>
     </tr>
 </table>
 
