--- a/Pages/endereço.html
+++ b/Pages/endereço.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <a href="../index.html">HOME</a>
+    <center><p>Venha nos visitar e conhecer nossos produtos</p></center>
+    <center><img src="../Imagens/endereço.png" width="500" height="250"></center>
+    <center><p>Rua Guaperuvu, 56 - Vila Aricanduva, São Paulo - SP, 03504-010</p></center>
 </body>
 </html>
