--- a/Pages/quemsomos.html
+++ b/Pages/quemsomos.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quem somos?</title>
 </head>
-<body>
-    <a href="../index.html">HOME</a>
+<a href="../index.html">HOME</a>
+<body bgcolor="#FFDEAD">
+    <center><img src="../Imagens/vinheria1.jpg" width="400" height="300"></center>
+    <p>Nossa vinícola foi fundada no ano de 1837 pelo nosso querido Eduardo de Menezes, nascido aqui mesmo no interior paulistano em São Roque, Francisco teve contato com as uvas desde cedo por influência de seu pai que sempre apreciou os mais belos e incorporados vinhos.</p>
+    <center><img src="../Imagens/vinicola2.jpg" width="400" height="300"></center>
+    <p>quando fez 19 anos, Francisco fundou a vinícola Agnello a fim de comercializar esse estilo de vida para todas as classes sociais da época, desde os mais ricos aos mais pobres.  Dessa forma um sonho se tornou realidade e hoje somos o número um no Brasil em vendas dos nossos vinhos nacionais.</p>
+    <center><img src="../Imagens/vinheria3.jpg" width="300" height="300"></center>
+        
 </body>
 </html>
