--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
-<body>
+<body bgcolor="#FFDEAD">
 <table align="left">
     <tr>
         <td>
