--- a/Pages/contato.html
+++ b/Pages/contato.html
@@ -8,6 +8,23 @@
 </head>
 <body bgcolor="#FFDEAD">
     <a href="../index.html">HOME</a>
-    
+    <p><center><h2>Contatos</h2></center></p>
+     <center><table border="6">
+        <tr>
+            <td><font size="5"> <img src="../Imagens/zap.png" width="30" height="30"> Whatsapp : (11)999999999</font></td>
+        </tr>
+        <tr>
+            <td><font size="5"><img src="../Imagens/relogio.png" width="30" height="30"> Horário de atendimento: De segunda a sexta das 07:00 às 18:00</font> </td>
+        </tr>
+    </table>
+    <br>
+    <table border="6">
+        <tr>
+            <td><font size="5"><img src="../Imagens/email.png" width="30" height="30"> E-mail : vinnheria@gmail.com</font></td>
+        </tr>
+        <tr>
+            <td><font size="5"><img src="../Imagens/relogio.png" width="30" height="30"> Horário de atendimento: Das 07:00 às 18:00</font> </td>
+        </tr>
+    </table></center>
 </body>
 </html>
