--- a/Pages/lojavirtual.html
+++ b/Pages/lojavirtual.html
@@ -8,5 +8,104 @@
 </head>
 <body bgcolor="#FFDEAD">
     <a href="../index.html">HOME</a>
+    <p><center><h2>Loja virtual</h2></center></p>
+    <center><table border="3">
+        <tr>
+            <td><center><img src="../Imagens/vinho1.png" width="80"></center></td>
+            <td><center><img src="../Imagens/vinho2.png" width="80"></center></td>
+            <td><center><img src="../Imagens/vinho3.png" width="80"></center></td>
+            <td><center><img src="../Imagens/vinho4.png" width="80"></center></td>
+            <td><center><img src="../Imagens/vinho5.png" width="80"></center></td>
+        </tr>
+        <tr>
+            <td><center><b>Monte Palacio Vino Rosado 750ml</b></center></td>
+            <td><center><b>Concha y Toro Exportacion Selecto Cabernet Sauvignon 2021 750ml</b></center></td>
+            <td><center><b>Portada Winemaker’s Selection Branco 2021 750ml</b></center></td>
+            <td><center><b>M. Chapoutier Hermitage Rouge AOC 2016</b></center></td>
+            <td><center><b>Terre da Vino Barolo Riserva DOCG 2015</b></center></td>
+        </tr>
+        <tr>
+            <td><center>Rosé . Espanha . Tempranillo</center></td>
+            <td><center>Tinto . Chile . Cabernet Sauvignon</center></td>
+            <td><center>Branco . Portugal . Várias Uvas</center></td>
+            <td><center>Tinto . França . Syrah</center></td>
+            <td><center>Tinto . Itália . Nebbiolo</center></td>
+        </tr>
+        <tr>
+            <td><center>Um vinho de uvas Tempranillo, que são consideradas as melhores da Espanha. Neste Monte Palacio, a casta originou um rosé frutado no nariz, com aromas de frutas vermelhas frescas, paladar macio, leve, delicado e com acidez agradável. Na hora de harmonizar, aposte em risotos, aves, peixes ou aperitivos.</center></td>
+            <td><center>O Cabernet retrata em goles potentes e complexos toda a tradição chilena de uma grande vinícula como a Concha Y Toro, que em 2018 foi avaliada como uma das melhores vinícolas do ano. Ele tem aroma de frutas maduras, como ameixa, groselha e toques de especiarias. O sabor é encorpado, com taninos redondos e final longo. Harmoniza muito bem com churrasco, queijos maduros e massas encorpadas.</center></td>
+            <td><center>Um vinho frutado, extremamente refrescante, macio e fácil de beber. Carrega aromas cítricos, com notas de maçãs e é a pedida perfeita para brindar em um piquenique ou até na beira da piscina com os amigos. Harmoniza bem com legumes grelhados, queijo coalho assado ou filé de frango ao pesto.</center></td>
+            <td><center>Este tinto 100% Syrah supreende em corpo e tipicidade, ele tem o sabor fresco e frutado, com taninos firmes e macios e final longo. O aroma é de frutas vermelhas, violetas, pimenta, tabaco e couro, tornando a armonização com risoto de parmesão e guisado de carne perfeita.</center></td>
+            <td><center>Este Barolo Riserva é amadurecido em carvalho por 3 anos, apresentando um paladar potente, elegante e encorpado, com taninos e acidez intensos e agradáveis, com aromas intensos de frutas pretas em compota, notas de rosas, violetas secas e especiarias. Harmoniza bem com carnes vermelhas e de caça preparadas em cocção lenta, pratos com trufas e cogumelos e queijos curados.</center></td>
+        </tr>
+        <tr>
+            <td><center><s>R$60,00</s><br><b>R$30,00 com 50%OFF</b><br>ou 3x de R$10,00 sem juros</center></td>
+            <td><center><s>R$90,00</s><br><b>R$54,90 com 39%OFF</b><br>ou 5x de R$10,98 sem juros</center></td>
+            <td><center><s>R$99,90</s><br><b>R$60,00 com 40%OFF</b><br>ou 6x de R$10,00 sem juros</center></td>
+            <td><center><s>R$1.529,90</s><br><b>R$1.070,93 com 30%OFF</b><br>ou 10x de R$107,10 sem juros</center></td>
+            <td><center><s>R$500,00</s><br><b>R$379,90 com 24%OFF</b><br>ou 6x de R$63,32 sem juros</center></td>
+        </tr>
+    </table></center>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
