--- a/Pages/endereço.html
+++ b/Pages/endereço.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#FFDEAD">
     <a href="../index.html">HOME</a>
     <center><p>Venha nos visitar e conhecer nossos produtos</p></center>
     <center><img src="../Imagens/endereço.png" width="500" height="250"></center>
