--- a/Pages/produtos.html
+++ b/Pages/produtos.html
@@ -4,9 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Produtos</title>
 </head>
 <body bgcolor="#FFDEAD">
-    <a href="../index.html">HOME</a>
+    <a href="../index.html">Home</a><br>
+    <p><center><h2>Produtos</h2></center></p>
+<table align="center" border="3">
+        <tr>
+            <td>
+                <center>MONTE PALACIO ROSADO</center>
+            </td>
+            <td>
+                <center>CONCHA Y TORO CABERNET SAUVIGNON 2021</center>
+            </td>
+            <td>
+                <center>PORTADA WINEMAKER'S SELECTION BRANCO 2021</center>
+            </td>
+            <td>
+                <center>M. CHAPOUTIER HERMITAGE ROUGE AOC 2016</center>
+            </td>
+            <td>
+                <center>TERRE DE VINO BAROLO RISERVA DOCG</center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center><img src="../imagens/vinho1.png" width="80px"></center>
+            </td>
+            <td>
+                <center><img src="../imagens/vinho2.png" width="80px"></center>
+            </td>
+            <td>
+                <center><img src="../imagens/vinho3.png" width="80px"></center>
+            </td>
+            <td>
+                <center><img src="../imagens/vinho4.png" width="80px"></center>
+            </td>
+            <td>
+                <center><img src="../imagens/vinho5.png" width="80px"></center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center>Espanha</center>
+            </td>
+            <td>
+                <center>Chile</center>
+            </td>
+            <td>
+                <center>Portugal</center>
+            </td>
+            <td>
+                <center>França</center>
+            </td>
+            <td>
+                <center>Itália</center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center>Rose</center>
+            </td>
+            <td>
+                <center>Cabernet</center>
+            </td>
+            <td>
+                <center>Branco</center>
+            </td>
+            <td>
+                <center>Tinto</center>
+            </td>
+            <td>
+                <center>Tinto</center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center>A empresa começou como uma vinícola tradicional em Fuente del Maestre em 1943 e posteriormente instalou uma pequena empresa de engarrafamento. Em 1990, tornou-se uma sociedade limitada e expandiu seus negócios para incluir a produção de sucos. A empresa investiu em máquinas e instalações para produzir sucos de uva e, em 2000, reformou os prédios do centro de informações e adquiriu tecnologia avançada de preparação e empacotamento. Em 2007, instalou quatro máquinas de embalagem de vinho no Bag in Box para aumentar a capacidade de embalagem da empresa. Em 2011, a empresa adquiriu a Bodegas Bonaval e desde então aumentou significativamente as vendas de Cava. As novas instalações da Bodegas López Morenas foram inauguradas em 2013, incluindo duas linhas de engarrafamento e máquinas de envase automático para saco na caixa. Hoje, a empresa produz vinhos em várias denominações, incluindo Cava, Ribera del Duero, Rioja, Ribera del Guadiana e Rueda, além de variedades exógenas como Pinot Noir. </center></td>
+            <td>
+                <center>História da Viña Concha y Toro, uma empresa chilena de produção de vinhos fundada por Melchor Concha y Toro em 1883. A empresa cresceu ao longo dos anos, tornando-se influente no mercado nacional e expandindo sua produção para o mundo todo, com destaque para as marcas Casillero del Diablo, Marques de Casa Concha e Don Melchor. A empresa investiu em pesquisa e inovação com a criação do Centro de Pesquisa e Inovação (CPI) e recebeu reconhecimento internacional por seus vinhos, incluindo a nomeação de Don Melchor Safra 2010 como um dos 10 melhores vinhos do mundo pela revista Wine Spectator e a pontuação perfeita de 100 pontos concedida ao Don Melchor 2018 pelo crítico James Suckling.</center>
+            </td>
+            <td>
+                <center>O vinho Portada é um dos melhores vinho tinto do mundo. Os vinhedos de Portada estão localizados em uma área de Lisboa, Portugal.
+
+A DJF possui larga experiência e sabedoria na produção de vinhos! Essa característica especial deu origem a vinhos produzidos na região de Lisboa, cobrindo suas colinas, O Portada! A vinícola, todos nós sabemos, coleciona mais de 260 prêmios nos últimos dez anos.
+
+Em 2017, esta vinícola foi eleita a melhor de Portugal, país que conhecido por produzir vinhos entre os melhores do mundo. Berliner Wine Thophy, respeitadíssimo concurso internacional, foi o responsável pelo prêmio.
+
+José Neiva Correia, o nome dispensa apresentações, é um dos maiores enólogos de Portugal, quiçá do mundo, assina a vinícola, produzindo uma qualidade que deu origem a tantos prêmios nacionais e internacionais.</center>
+            </td>
+            <td>
+                <center>A história da vinícola M. Chapoutier, que teve sua origem em 1808 com a criação da Calvet et Compagnie, em Tain-l'Hermitage, França. Em 1897, Marius Chapoutier juntou-se a Rodolphe Delépine para fundar a Delépine et Chapoutier, com o objetivo de exportar vinhos. Em 1922, com a aposentadoria de Delépine, Marius mudou o nome da empresa para Chapoutier et Compagnie. Em 1929, foi criada a vinícola M. Chapoutier. Após a morte de Marius em 1937, seu filho Marc assumiu os negócios da família, e em 1990, seu irmão Michel se tornou presidente da empresa, implementando práticas biodinâmicas de cultivo. A vinícola expandiu seus negócios adquirindo propriedades na Austrália, Roussillon, Portugal, Alsácia, Beaujolais e Provence, além de inaugurar um complexo hoteleiro em Tain-l'Hermitage. A M. Chapoutier é hoje uma das marcas mais reconhecidas da França, com Michel e sua esposa, Corinne, à frente dos negócios, com seus filhos Mathilde e Maxine ajudando a perpetuar a tradição e a visão da empresa.</center>
+            </td>
+            <td>
+                <center>O Barolo é um vinho produzido no noroeste da Itália, Província de Cuneo, região do Piemonte e sob DOCG ou "Denominação de Origem Controlada e Garantida". Ficou conhecido como o Rei dos Vinhos e o Vinho dos Reis. O nome Barolo está ligado à família Falletti, então Marqueses de Barolo, que iniciaram a produção dos vinhos na região          </center>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
