--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
 </head>
-<center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
 <body bgcolor="#FFDEAD">
 <table align="left">
     <tr>
@@ -21,7 +21,7 @@
     </tr>
     <tr>
         <td>
-        <a href="/Pages/endereço.html" target="_blank">Endereço</a>
+        <a href="Pages/endereço.html" target="_blank">Endereço</a>
         </td>
     <tr>
         <td>
@@ -33,6 +33,5 @@
         </td>
     </tr>
 </table>
-
 </body>
 </html>
