--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <center><img src="/Imagens/logotipovinicola.png" width="300" height="300"</center>
+    <title>Pagina Principal</title>
+    <center><img src="src/Imagens/logotipovinicola.png" width="300" height="300"</center>
 </head>
 <body bgcolor="#FFDEAD">
 <table align="left">
     <tr>
         <td>
-       <a href="Pages/lojavirtual.html">Loja Virtual</a>
+       <a href="src/Pages/lojavirtual.html">Loja Virtual</a>
         </td>
     </tr>
     <tr>
         <td>
-        <a href="Pages/produtos.html">Produtos</a>
+        <a href="src/Pages/produtos.html">Produtos</a>
         </td>
     </tr>
     <tr>
         <td>
-        <a href="Pages/endereço.html" target="_blank">Endereço</a>
+        <a href="src/Pages/endereço.html" target="_blank">Endereço</a>
         </td>
     <tr>
         <td>
-        <a href="Pages/quemsomos.html">Quem somos?</a>
+        <a href="src/Pages/quemsomos.html">Quem somos?</a>
         </td>
     <tr>
         <td>
-        <a href="Pages/contato.html">Contato</a>
+        <a href="src/Pages/contato.html">Contato</a>
         </td>
     </tr>
 </table>
