--- a/src/Pages/endereço.html
+++ b/src/Pages/endereço.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Endereço</title>
 </head>
 <body bgcolor="#FFDEAD">
-    <a href="../index.html">HOME</a>
+    <a href="/index.html">HOME</a>
     <center><p>Venha nos visitar e conhecer nossos produtos</p></center>
     <center><img src="../Imagens/endereço.png" width="500" height="250"></center>
     <center><p>Rua Guaperuvu, 56 - Vila Aricanduva, São Paulo - SP, 03504-010</p></center>
