--- a/src/Pages/produtos.html
+++ b/src/Pages/produtos.html
@@ -7,7 +7,7 @@
     <title>Produtos</title>
 </head>
 <body bgcolor="#FFDEAD">
-    <a href="../index.html">Home</a><br>
+    <a href="/index.html">Home</a><br>
     <p><center><h2>Produtos</h2></center></p>
 <table align="center" border="3">
         <tr>
