--- a/src/Pages/quemsomos.html
+++ b/src/Pages/quemsomos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem somos?</title>
 </head>
-<a href="../index.html">HOME</a>
+<a href="/index.html">HOME</a>
 <body bgcolor="#FFDEAD">
     <center><img src="../Imagens/vinheria1.jpg" width="400" height="300"></center>
     <p>Nossa vinícola foi fundada no ano de 1837 pelo nosso querido Eduardo de Menezes, nascido aqui mesmo no interior paulistano em São Roque, Francisco teve contato com as uvas desde cedo por influência de seu pai que sempre apreciou os mais belos e incorporados vinhos.</p>
