--- a/src/Pages/lojavirtual.html
+++ b/src/Pages/lojavirtual.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja Virtual</title>
 </head>
 <body bgcolor="#FFDEAD">
-    <a href="../index.html">HOME</a>
+    <a href="/index.html">HOME</a>
     <p><center><h2>Loja virtual</h2></center></p>
     <center><table border="3">
         <tr>
